[gd_scene load_steps=3 format=3 uid="uid://bflaovotx1qrh"]

[ext_resource type="Script" uid="uid://ca6c2iyipm00y" path="res://scenes/content_menu_scenes/object_content_window_page.gd" id="1_81v8a"]

[sub_resource type="LabelSettings" id="LabelSettings_mv7yy"]
line_spacing = 0.0

[node name="MarginContainer" type="MarginContainer"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_81v8a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.28517988, 0.3463427, 0.4223345, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Name"

[node name="LabelInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "bla bla
bla
"
label_settings = SubResource("LabelSettings_mv7yy")
autowrap_mode = 2

[node name="ActionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
